compiler/ori_macros/tests/ui/fail/missing_primary_span.rs
//! Error: Missing #[primary_span] attribute.

use ori_macros::Diagnostic;

#[derive(Diagnostic)]
#[diag(E1001, "some error")]
pub struct MissingPrimarySpan {
    pub span: Span,
}

fn main() {}
